--- a/css/estilo.css
+++ b/css/estilo.css
@@ -120,9 +120,6 @@ hr.rounded {
         border-color: #ffffff;
       }
       
-      .form-control:focus {
-        background: #73aa8c;
-      }
       
       footer {
         margin:auto;
@@ -302,9 +299,7 @@ hr.rounded {
       border-color: #ffffff;
     }
     
-  .form-control:focus {
-      background: #73aa8c;
-    }
+
     
   footer {
       margin:auto;
@@ -314,3 +309,70 @@ hr.rounded {
     .containerfaq{
       width: 100%; background-color: #73aa8c; padding: 30px; border-radius: 10px;
     }
+
+
+#formulario {
+  width: 80%;
+  left: 10%;
+  background: #73aa8c;
+  margin-top: 10px;
+  padding-top: 10px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-bottom: 30px;
+  border-radius: 5px;
+}
+
+label.error {
+  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+  -moz-animation: fadein 1s; /* Firefox < 16 */
+   -ms-animation: fadein 1s; /* Internet Explorer */
+    -o-animation: fadein 1s; /* Opera < 12.1 */
+       animation: fadein 1s;
+  color: #a72e2e;
+  font-size: 1rem;
+  display: block;
+  margin-top: 5px;
+}
+
+input.error, textarea.error {
+  border: 1px dashed #a72e2e;
+  font-weight: 300;
+  color: #a72e2e;
+}
+
+#videoiframe{
+  display:block;
+  width:100%;
+  text-align:center;
+}
+
+@keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+  from { opacity: 0; }
+  to   { opacity: 1; }
+}
+
